--- a/24 - Sticky Nav/style-START.css
+++ b/24 - Sticky Nav/style-START.css
@@ -24,7 +24,9 @@ body {
   transform: scale(0.98);
   transition: transform 0.5s;
 }
-
+body.fixed-nav .site-wrap {
+  transform: scale(1);
+}
 header {
   text-align: center;
   height: 50vh;
@@ -69,9 +71,12 @@ li.logo {
   max-width: 0;
   overflow: hidden;
   background: white;
-  transition: all .5s;
+  transition: all 1s;
   font-weight: 600;
   font-size: 30px;
+}
+body.fixed-nav li.logo {
+  max-width: 500px;
 }
 
 li.logo a {
@@ -85,4 +90,8 @@ nav a {
   color: white;
   transition: all 0.2s;
   text-transform: uppercase;
+}
+body.fixed-nav nav {
+  position: fixed;
+  box-shadow: 0 5px 0 rgba(0,0,0,0.1);
 }
